# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "udpbd-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bitbybit = "1.1.3"
arbitrary-int = "1.2.3"
static_assertions = "1.1.0"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
anyhow = "1.0.70"
