# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "udpbd-vexfat"
version = "0.1.0"
edition = "2021"

[dependencies]
bitbybit = "^1.1.3"
arbitrary-int = "^1.2.3"
static_assertions = "^1.1.0"
bytemuck = { version = "^1.13.1", features = ["derive", "min_const_generics"] }
anyhow = "^1.0.70"
vexfatbd = { path = "../vexfatbd" }
clap = { version = "^4.2.3", features = ["derive"] }
walkdir = "^2.3.3"
num-traits = "^0.2.15"

[profile.release]
overflow-checks = true
strip = "symbols"
